# gw-yolo-update

./: .gitignore  AGENT.md  AGENTS.md  GW-YOLO项目审计与GWTC-4-5研究路线.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-waveforms.txt
configs/: amplfi_background_capacity_policy.yaml  amplfi_common_bbh_publication.yaml  amplfi_common_bbh_training_prior.yaml  amplfi_common_native_conditioning.yaml  amplfi_training_stage_policy.yaml  automatic_mask_publication_gate.yaml  calibration_perturbation_o4a_validation.yaml  candidate_local_refiner_v1.yaml  candidate_local_refiner_v2.yaml  candidate_local_refiner_v3_endpoint_warm.yaml  candidate_network_set_ranker_v1.yaml  candidate_pair_ranker_v1.yaml  candidate_pair_ranker_v2_strain.yaml  candidate_pair_ranker_v3_time_frequency.yaml  candidate_pair_ranker_v3_time_frequency_fixed_epochs.yaml  candidate_pair_ranker_v4_multi_resolution.yaml  candidate_pair_scaling_evaluation.yaml  candidate_pair_v4_promotion.yaml  candidate_proposal_threshold_selection.yaml  candidate_refiner_validation_v1.yaml  candidate_validation_promotion.yaml  data_factory_pilot.yaml  data_factory_research.yaml  detector_arrival_timing.yaml  detector_arrival_timing_context_v2.yaml  detector_arrival_timing_fixed_updates.yaml  detector_arrival_timing_promotion.yaml  detector_arrival_timing_spectrogram_v3.yaml  detector_endpoint_proposal_threshold_refinement.yaml  detector_endpoint_proposal_v1.yaml  detector_stratified_candidate_calibration.yaml  dingo_o4a_native_conditioning.yaml  dingo_official_native_runtime.yaml  dingo_runtime_compatibility_policy.yaml  (+59 more)
(+338 files in other folders)
