[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwyolo-research"
version = "0.1.0"
description = "Reproducible multi-detector GW chirp/glitch segmentation and evaluation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "GW-YOLO research team"}]
dependencies = [
  "numpy>=1.21",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.0",
  "ultralytics>=8.4.0",
]
data = [
  "h5py>=3.7",
]
waveforms = [
  "pycbc",
]
dev = [
  "pytest>=7",
  "ruff>=0.5",
]

[project.scripts]
gwyolo = "gwyolo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
